--- a/devenv/Vagrantfile
+++ b/devenv/Vagrantfile
@@ -34,7 +34,7 @@ SCRIPT
 
 Vagrant.require_version ">= 1.7.4"
 Vagrant.configure('2') do |config|
-  config.vm.box = "ubuntu/xenial64"
+  config.vm.box = "Box/xenial64"
 
   config.vm.network :forwarded_port, guest: 7050, host: 7050, id: "orderer", host_ip: "localhost", auto_correct: true # fabric orderer service
   config.vm.network :forwarded_port, guest: 7051, host: 7051, id: "peer", host_ip: "localhost", auto_correct: true # fabric peer service
@@ -46,6 +46,9 @@ Vagrant.configure('2') do |config|
   config.vm.synced_folder ENV.fetch('LOCALDEVDIR', ".."), "#{LOCALDEV}"
   if File.exist?("../../fabric-ca")
     config.vm.synced_folder "../../fabric-ca", "/opt/gopath/src/github.com/hyperledger/fabric-ca"
+  end
+  if File.exist?("../../fabric-samples")
+    config.vm.synced_folder "../../fabric-ca", "/opt/gopath/src/github.com/hyperledger/fabric-samples"
   end
 
   config.vm.provider :virtualbox do |vb|
